@@ -5,6 +5,7 @@ Version 1.4.4
 - sort catalogs in the manager alphabetically (#245)
 - fixed escaping of quotes in catalog headers (#290)
 - fixed reformatting of obsolete entries in catalogs (#329)
+- fixed list selection visibility on Windows 7 (#336)
 
 
 Version 1.4.3
